--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <title>portifolio</title>
+    <title>Miguel Bonilha - Portofólio</title>
   </head>
   <body>
     <div id="root"></div>
